--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "tsc": "tsc",
-    "start": "node ./index.js"
+    "start": "node ./dist/index.js"
   },
   "author": "",
   "license": "ISC",
