--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/express": "^4.17.13",
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.10",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "typescript": "^4.6.4"
   },
